--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="px22">22px</dimen>
     <dimen name="px23">23px</dimen>
     <dimen name="px25">25px</dimen>
+    <dimen name="px26">26px</dimen>
     <dimen name="px28">28px</dimen>
     <dimen name="px30">30px</dimen>
     <dimen name="px31">31px</dimen>
