--- a/app/src/main/res/drawable/shape_navigation.xml
+++ b/app/src/main/res/drawable/shape_navigation.xml
@@ -22,7 +22,7 @@
             <item>
                 <shape android:shape="oval" >
                     <corners android:radius="90dp"/>
-                    <solid android:color="#00A84B" />
+                    <solid android:color="#16BB91" />
                     <size android:width="162dp" android:height="162dp"/>
                 </shape>
             </item>
