--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -284,6 +284,7 @@
                 android:background="#E9EDEE" />
 
             <com.zhy.autolayout.AutoLinearLayout
+                android:id="@+id/lay_my_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
