--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -98,5 +98,8 @@
     <color name="sel">#083731</color>
     <color name="line_view">#DBDBDB</color>
     <color name="textcolor">#444444</color>
+    <color name="text_dark">#BCBABA</color>
+    <color name="table_bg">#F3F4F6</color>
+    <color name="textcolor_dark">#B5B5B5</color>
 
 </resources>
